# skyq-mcp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
src/skyq_mcp/: __init__.py  __main__.py  client.py  server.py  settings.py  skyq_client.py
tests/: conftest.py  e2e.py  test_server.py
