[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skyq-mcp-server"
version = "0.1.0"
description = "MCP Server for Sky Q receivers — EPG, recordings, remote control"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["mcp", "sky", "skyq", "epg", "pvr", "home-automation"]

dependencies = [
    "mcp[cli]>=1.0.0",
    "pyskyqremote>=0.3.8",
    "starlette>=0.40.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
skyq-mcp-server = "skyq_mcp.__main__"

[tool.hatch.build.targets.wheel]
packages = ["src/skyq_mcp"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
